<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:minWidth="400dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/ue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/game_night"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ue_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ue_title"
            app:layout_constraintEnd_toEndOf="@+id/ue_enter_event_button"
            app:layout_constraintTop_toTopOf="@+id/ue_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/attendies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendies"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ue_title"
            app:layout_constraintTop_toTopOf="@+id/ue_enter_event_button" />

        <TextView
            android:id="@+id/ue_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="2"
            android:textColor="#4CAF50"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/attendies"
            app:layout_constraintTop_toBottomOf="@+id/attendies" />

        <Button
            android:id="@+id/ue_enter_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ue_title"
            app:layout_constraintTop_toBottomOf="@+id/ue_date"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/ue_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="/"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ue_accepted"
            app:layout_constraintStart_toEndOf="@+id/ue_accepted"
            app:layout_constraintTop_toTopOf="@+id/ue_accepted"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ue_cancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="24dp"
            android:text="1"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ue_slash"
            app:layout_constraintEnd_toEndOf="@+id/attendies"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ue_slash"
            app:layout_constraintTop_toTopOf="@+id/ue_slash"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ue_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostet_by"
            app:layout_constraintBottom_toTopOf="@+id/attendies"
            app:layout_constraintStart_toStartOf="@+id/ue_title"
            app:layout_constraintTop_toBottomOf="@+id/ue_title" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ue_host,ue_title,attendies,ue_accepted,ue_slash,ue_cancelled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/group3"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ue_date,ue_enter_event_button"
            app:layout_constraintEnd_toStartOf="@+id/group"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

